--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.0-alpha3",
+    "crypto-js": "^4.1.1",
+    "ipfs-http-client": "^60.0.0",
+    "ipfs-mini": "^1.1.5",
     "next": "latest",
+    "node-file-encrypt": "^0.0.8",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
