--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "array-to-image": "^1.0.0",
+    "audiobuffer-to-wav": "^1.0.0",
     "bootstrap": "^5.3.0-alpha3",
     "crypto-js": "^4.1.1",
     "file-saver": "^2.0.5",
