--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@polkadot/api-contract": "^10.7.1",
     "array-to-image": "^1.0.0",
     "audiobuffer-to-wav": "^1.0.0",
+    "bigint-buffer": "^1.1.5",
     "bootstrap": "^5.3.0-alpha3",
     "crypto-js": "^4.1.1",
     "file-saver": "^2.0.5",
     "ipfs-http-client": "^60.0.0",
     "ipfs-mini": "^1.1.5",
+    "mathjs": "^11.8.0",
     "next": "latest",
     "node-file-encrypt": "^0.0.8",
     "react": "18.2.0",
