--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "audiobuffer-to-wav": "^1.0.0",
     "bigint-buffer": "^1.1.5",
     "bootstrap": "^5.3.0-alpha3",
+    "canvas": "^2.11.2",
     "crypto-js": "^4.1.1",
     "file-saver": "^2.0.5",
     "ipfs-http-client": "^60.0.0",
@@ -19,8 +20,10 @@
     "mathjs": "^11.8.0",
     "next": "latest",
     "node-file-encrypt": "^0.0.8",
+    "pixelmatch": "^5.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "resemblejs": "^4.1.0",
     "text-encoding": "^0.7.0",
     "tweetnacl": "^1.0.3"
   },
